js/js.translator/testData/incremental/invalidation/classWithJsExport/lib1/lib.1.kt
@JsExport
open class Foo {
    open fun foo(): String = "Fail"
}